--- a/charts/reposilite/values.yaml
+++ b/charts/reposilite/values.yaml
@@ -112,16 +112,16 @@ ingress:
 ## Resources
 resources:
   limits:
-    cpu: 100m
-    memory: 32Mi
+    cpu: "1"
+    memory: 64Mi
   requests:
-    cpu: 100m
-    memory: 16Mi
+    cpu: "0.1"
+    memory: 32Mi
 
 ## Environment variables
 env:
-#  - name: JAVA_OPTS
-#    value: "-Xmx16M"
+  - name: JAVA_OPTS
+    value: "-Xmx32M"
 #  - name: REPOSILITE_OPTS
 #    value: "--port 8080"
 #  - name: SOME_VAR_FROM_CONFIG_MAP
