--- a/charts/reposilite/values.yaml
+++ b/charts/reposilite/values.yaml
@@ -187,6 +187,7 @@ serviceAccount:
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
   name: ""
+  automountServiceAccountToken: false
 
 ## Pod affinity
 affinity: {}
