Support configurable security context
Deploying this Helm Chart may require running the application as
non-root, with as few capabilities as possible.

With the possibility to configure the a `securityContext` on both
pod-level and container-level, such requirements can be easier
satisfied.

For backwards compatibility, both security context specifications are
disabled by default.

Signed-off-by: justusbunsi <61625851+justusbunsi@users.noreply.github.com>

--- a/charts/reposilite/values.yaml
+++ b/charts/reposilite/values.yaml
@@ -57,6 +57,14 @@ deployment:
     #     port: 8080
     #     host: localhost
     #     scheme: http
+  podSecurityContext:
+    enabled: false
+    fsGroup: 999
+  containerSecurityContext:
+    enabled: false
+    runAsUser: 999
+    runAsGroup: 999
+
 
 ## Service configuration
 service:
