--- a/charts/reposilite/values.yaml
+++ b/charts/reposilite/values.yaml
@@ -57,6 +57,16 @@ deployment:
     #     port: 8080
     #     host: localhost
     #     scheme: http
+  # Security context for all initContainers and containers in the pod
+  podSecurityContext:
+    enabled: false
+    fsGroup: 999
+  # Security context specific to the runtime container in the pod.
+  containerSecurityContext:
+    enabled: false
+    runAsUser: 999
+    runAsGroup: 999
+
 
 ## Service configuration
 service:
