--- a/charts/reposilite/values.yaml
+++ b/charts/reposilite/values.yaml
@@ -127,17 +127,16 @@ ingress:
 
 ## Resources
 resources:
-  limits:
-    cpu: "1"
-    memory: 64Mi
   requests:
-    cpu: "0.1"
-    memory: 32Mi
-
+    cpu: 1.0
+    memory: 128Mi
+  limits:
+    cpu: 2.0
+    memory: 256Mi
 ## Environment variables
 env:
   - name: JAVA_OPTS
-    value: "-Xmx32M"
+    value: "-Xmx64M"
 #  - name: REPOSILITE_OPTS
 #    value: "--port 8080"
 #  - name: SOME_VAR_FROM_CONFIG_MAP
