--- a/charts/reposilite/templates/service.yaml
+++ b/charts/reposilite/templates/service.yaml
@@ -17,6 +17,6 @@ spec:
       name: http
       {{- if (and (contains "NodePort" .Values.service.type) (not (empty .Values.service.nodePort))) }}
       nodePort: {{ .Values.service.nodePort }}
-      {{- end }
+      {{- end }}
   selector:
     {{- include "reposilite.selectorLabels" . | nindent 4 }}
