--- a/charts/reposilite/templates/hpa.yaml
+++ b/charts/reposilite/templates/hpa.yaml
@@ -1,33 +1,29 @@
-{{- if .Values.autoscaling.enabled }}
-{{- if .Capabilities.APIVersions.Has "autoscaling/v2" }}
+{{- if .Values.hpa.enabled -}}
+---
 apiVersion: autoscaling/v2
-{{- else if .Capabilities.APIVersions.Has "autoscaling/v2beta2" }}
-apiVersion: autoscaling/v2beta2
-{{- else if .Capabilities.APIVersions.Has "autoscaling/v2beta1" }}
-apiVersion: autoscaling/v2beta1
-{{- else }}
-  {{- fail "ERROR: You must have at least autoscaling/v2beta1 to use HorizontalPodAutoscaler" }}
-{{- end }}
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ template "reposilite.fullname" . }}
+  {{- with (include "reposilite.hpa.annotations" . | fromYaml) }}
+  annotations:
+    {{- tpl (toYaml .) $ | nindent 4 }}
+  {{- end }}
+  {{- with (include "reposilite.hpa.labels" . | fromYaml) }}
   labels:
-    {{- include "reposilite.labels" . | nindent 4 }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+  name: {{ include "reposilite.fullname" . }}
+  namespace: {{ .Release.Namespace }}
 spec:
+  {{- with .Values.hpa.behavior }}
+  behavior:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+  metrics:
+  {{- toYaml .Values.hpa.metrics | nindent 2 }}
+  maxReplicas: {{ .Values.hpa.maxReplicas }}
+  minReplicas: {{ .Values.hpa.minReplicas }}
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ template "reposilite.fullname" . }}
-{{- if .Values.autoscaling.minReplicas }}
-  minReplicas: {{ .Values.autoscaling.minReplicas }}
-{{- end }}
-  maxReplicas: {{ .Values.autoscaling.maxReplicas }}
-{{- if .Values.autoscaling.metrics }}
-  metrics:
-{{ toYaml .Values.autoscaling.metrics | indent 4 }}
-{{- end }}
-{{- if .Values.autoscaling.behavior }}
-  behavior:
-{{ toYaml .Values.autoscaling.behavior | indent 4 }}
-{{- end }}
-{{- end }}
+    name: {{ include "reposilite.fullname" . }}
+{{- end -}}
