--- a/charts/reposilite/templates/serviceAccount.yaml
+++ b/charts/reposilite/templates/serviceAccount.yaml
@@ -1,13 +1,25 @@
-{{- if .Values.serviceAccount.create -}}
+{{- if not .Values.serviceAccount.existing.enabled }}
+---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "reposilite.serviceAccountName" . }}
-  labels:
-    {{- include "reposilite.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
+  {{- with (include "reposilite.serviceAccount.annotations" . | fromYaml) }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-automountServiceAccountToken: {{ .Values.serviceAccount.automountServiceAccountToken }}
+  {{- with (include "reposilite.serviceAccount.labels" . | fromYaml) }}
+  labels:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+  name: {{ include "reposilite.fullname" . }}
+  namespace: {{ .Release.Namespace }}
+automountServiceAccountToken: {{ .Values.serviceAccount.new.automountServiceAccountToken }}
+{{- with .Values.serviceAccount.new.imagePullSecrets }}
+imagePullSecrets:
+  {{- toYaml . | nindent 4 }}
+{{- end }}
+{{- with .Values.serviceAccount.new.secrets }}
+secrets:
+  {{- toYaml . | nindent 4 }}
+{{- end }}
 {{- end }}
